It works better